# jenkins-config

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  build.py  entry_point.py  jenkins-auto-build.ps1  jenkins-auto-build.sh  jenkins-build.spec  jenkins-config.example.json  jenkins-config.example.yaml  pyproject.toml
.github/workflows/: build.yml
docs/plans/: 2026-03-20-python-refactor-design.md  2026-03-20-python-refactor.md
jenkins_config/: build_errors.py  build_result.py  builder.py  cli.py  cmd_build.py  cmd_init.py  cmd_interactive.py  cmd_list.py  config.py  config_io.py  config_types.py  history.py  jenkins.py  utils.py
tests/: test_build_errors.py  test_builder.py  test_cli.py  test_cmd_build.py  test_cmd_build_run.py  test_cmd_init.py  test_cmd_interactive.py  test_cmd_list.py  test_config.py  test_config_business.py  test_config_io.py  test_history.py  test_jenkins.py  test_jenkins_git_param.py  test_utils.py
