[project]
name = "jenkins-config"
version = "1.0.0"
description = "Jenkins 自动构建工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
    "pillow>=12.2.0",
]

[project.scripts]
jenkins-build = "jenkins_config.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jenkins_config"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
